<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color6"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textColor="@color/color2"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/color6"
        app:srcCompat="@drawable/r"
        tools:srcCompat="@drawable/r"
        android:contentDescription="@string/content_Description" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color6"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:text="@string/message"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color6"
        android:padding="8dp"
        android:textAlignment="center"
        android:gravity="center"
        android:contentDescription="@string/select"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:paddingHorizontal="50dp"
            android:text="@string/show_btn"
            android:textColor="@color/white" />
    </LinearLayout>

    <ListView
        android:id="@+id/myList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:divider="@null"
        android:maxHeight="300dp"
        android:padding="16dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbVertical="@drawable/custom_scrollbar_thumb" />

    <TextView
        android:id="@+id/puzzle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:text="@string/message_puzzle"
        android:textSize="16sp"
        android:visibility="gone"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/puzzle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            tools:ignore="DuplicateIds"
            android:contentDescription="@string/content_Description" />
    </LinearLayout>

    <TextView
        android:id="@+id/puzzle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/message_option"
        android:textSize="20sp"
        android:visibility="gone"
        tools:ignore="DuplicateIds" />

    <LinearLayout
        android:id="@+id/puzzle4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="gone">

        <Button
            android:id="@+id/result1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:text="@string/initial_txt"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/result2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:text="@string/initial_txt"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/result3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:text="@string/initial_txt"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/puzzle5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/score_txt"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/start_score"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/puzzle6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/restart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:text="@string/restart_btn"
            android:textColor="@color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/btn_style"
        android:text="@string/puzzle_btn"
        android:textColor="@color/white" />

</LinearLayout>